# aoc2023

./: Cargo.toml  README.md
inputs/: aoc2023-day06-input2.txt
src/: config.rs  lib.rs
