# Cargo.toml

[package]
name = "aoc2023"
version = "1.0.2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "FMI get temperature reading"
repository = "https://github.com/sjm42/aoc2023"
readme = "README.md"
keywords = ["AOC", "Advent of Code"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
chrono = "0"
env_logger = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }


[build-dependencies]
build-data = "0"


[profile.release]
opt-level = 3
lto = true


[profile.minsize]
inherits = "release"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

# EOF
